<resources>
    <string name="app_name">My Awesome App</string>
    <string name="butnext">Next</string>
    <string name="name_hint">Name</string>
    <string name="calc_but">Calculator</string>
    <string name="buShow">Show layout</string>
    <string name="hello">Hello World!</string>
    <string name="lsView">List View</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="buLogin">Login</string>
</resources>
