<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.alexwilkinson.firstapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:id="@+id/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:ems="10"
            android:layout_marginTop="42dp"
            android:id="@+id/name"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/button"
            android:layout_alignEnd="@+id/button"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp" />

        <Button
            android:background="@drawable/bu_colour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/butnext"
            android:id="@+id/button"
            android:onClick="buClick"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="165pt">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/buShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buShow"
                android:id="@+id/buShow"
                android:layout_alignTop="@+id/button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/lsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buList"
                android:onClick="buList"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/calc_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buCalc"
                android:onClick="buCalc"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/buLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buLoginNow"
                android:id="@+id/button5" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
